# myzip

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  complicated-lz77  compressed_out  cowsay.txt.deflate  cowsay.txt.lz77  cowsay_info  cowsay_me.txt.deflate  data.ipynb  deflated.original  deflatesplain  fx_map_and_set_times.txt  fx_map_times_4.txt  fx_map_vs_hashmap.sh  gzip32.txt  hashmap_times.txt  lzstuff  lzstuff.lz77  miniz_32.txt  myzip.deflate  profile_test_theirs  profile_tests_mine.sh  real_zip_info  revealfile  run_tests.sh  simple_32.txt  test2.txt  test_short.txt  times32_gzip_gunzip.txt  times32_miniz.txt  times32_simple.txt  times4.txt  times4_fx_map.txt  wtf.txt  zip.deflate  zip_real  zip_stuff  zipsplain
callgrinds/: callgrind.out.10283  callgrind.out.10368  callgrind.out.10423  callgrind.out.138339  callgrind.out.14376  callgrind.out.17905  callgrind.out.182478  callgrind.out.20621  callgrind.out.212354  callgrind.out.212375  callgrind.out.212491  callgrind.out.212767  callgrind.out.212784  callgrind.out.212929  callgrind.out.219450  callgrind.out.219525  callgrind.out.219683  callgrind.out.219879  callgrind.out.252613  callgrind.out.263703  callgrind.out.268745  callgrind.out.271510  callgrind.out.271670  callgrind.out.275816  callgrind.out.275981  callgrind.out.276149  callgrind.out.276380  callgrind.out.277377  callgrind.out.277400  callgrind.out.279691  callgrind.out.279861  callgrind.out.280022  callgrind.out.281245  callgrind.out.40285  callgrind.out.40397  callgrind.out.44440  callgrind.out.5402  callgrind.out.6457  callgrind.out.66632  (+2 more)
(+39 files in other folders)
