[package]
name = "zip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
miniz_oxide = { path = "miniz_oxide/miniz_oxide" }
lazy_static = "1.4.0"
# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "myunzip0"

[[bin]]
name = "myzip0"

[lib]
name = "utils"
path = "src/utils.rs"
